<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱信阳</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="progress_loading">正在加载，请稍后…</string>
    <string name="progress_login">正在验证数据，请稍后…</string>
    <string name="request_loading">正在请求服务器，请稍后…</string>
    <string name="network_show_title">没有可用网络</string>
    <string name="network_show_msg">是否对网络进行设置？</string>
    <string name="network_show_setting">设置</string>
    <string name="network_show_exit">离开</string>
    <string name="network_show_error">网络异常！</string>
    <string name="network_show_connectionless">无网络连接！</string>
    <string name="send_data_error">发送数据失败</string>
    <string name="update_success">修改成功</string>
    <string name="dialog_title_getDataFail">获取数据失败</string>
    <string name="dialog_title_newwork_request_timeout">网络超时，服务器断开或者请检查网络连接是否正常</string>
    <string name="dialog_title_newData">暂无数据</string>
    <string name="dialog_title_getUserInfoDataFail">获取用户信息失败</string>
    <string name="exit">退出</string>
    <string name="userNameError">用户名不能为空!</string>
    <string name="passwordError">密码不能为空!</string>
    <string name="error">出错</string>
    <string name="mainmenu">主菜单</string>
    <string name="daiban">待办</string>
    <string name="more">更多</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="qzone">腾讯QQ</string>
    <string name="login_username_hint">请输入您的账号</string>
    <string name="userName_password_error">用户名或者密码错误!</string>
    <string name="login_label_signin">登录</string>
    <string name="find_password">找回密码</string>
    <string name="my_vip">我的会员卡</string>
    <string name="membership_detail">会员卡详情</string>
    <string name="my_daijin">我的收藏</string>
    <string name="tuijian">每日推荐</string>
    <string name="jifen">我的积分</string>
    <string name="yuding">订单管理</string>
    <string name="recommend">首页</string>
    <string name="my_store">商家</string>
    <string name="my_content">我的</string>
    <string name="my_more">更多</string>
    <string name="share_seting">分享设置</string>
    <string name="about_xinyan">关于爱信阳</string>
    <string name="what_zhanye_info">"\u0009安徽华研电子科技有限公司成立于2011年10月，位于安徽省合肥市高新技术开发区。华研科技一直专注于软件研发、服务外包及硬件的研发。
     \u0009华研科技倡导“专业、务实、高效、创新”的企业精神，具有良好的内部机制。优良的工作环境以及良好的激励机制，吸引了一批年轻的、有学识的、具有实干精神的人才。高素质、高水平、高效率的人才是华研科技在当今的软件IT行业长远发展的保障。
     \u0009公司在项目研发方面的高投入，严要求，让公司具备了相应的创新能力及丰富的研发经验，这将成为您解决疑问和难题的有利保障。未来，公司将会继续专注于高新软件行业，瞄准企业剥离业务、软件开发烂尾项目以及企业边际业务为市场核心点，为客户及社会创造更大的财富。以帮助企业加快信息化建设、IT行业系统集成商和软件开发商，降低开发成本扩大企业利润为目标！"</string>
    <string name="about_info">"安徽华研电子科技有限公司 版权所有
 Copyright © 2014-2016"</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="erweima">二维码扫描</string>
    <string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://sharesdk.cn @ShareSDK</string>
    <string name="share">分享</string>
    <string name="free_reg">免费注册</string>
    <string name="quick_login">无账号快捷登录</string>
    <string name="register">注册</string>
    <string name="hint_phone">请输入您的手机号</string>
    <string name="hint_code">请输入手机获取的短信验证码</string>
    <string name="hint_pwd">请设置登录密码</string>
    <string name="hint_message_code">请输入短信验证码</string>
    <string name="save">保存</string>
    <string name="valid_login">验证并登录</string>
    <string name="get_code">获取验证码</string>
    <string name="submit_code">提交验证码</string>
    <string name="read_agreement">我已阅读并接受</string>
    <string name="read_agreement2">爱信阳用户协议</string>
    <string name="film_xuan">全部</string>
    <string name="hotel_order">未付款</string>
    <string name="non_consumption">未消费</string>
    <string name="dai_eva">待评价</string>
    <string name="refund">退款</string>
    <string name="group_purchase">商品</string>
    <string name="use_help">代金券使用帮助</string>
    <string name="choice_city">选择城市</string>
    <string name="location_city">当前定位城市</string>
    <string name="visit_city">最近访问的城市</string>
    <string name="hot_city">热门城市</string>
    <string name="all_city">全部城市</string>
    <string name="choujiang_xiangqing">抽奖详情</string>
    <string name="add">添加</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="group_purchase_detail">商品详情</string>
    <string name="the_album">点击查看相册</string>
    <string name="immediate_panic_buying">立即抢购</string>
    <string name="store_detail">商家详情</string>
    <string name="resend_code">重发验证码</string>
    <string name="query">搜索</string>
    <string name="tishi">输入商家或分类</string>
    <string name="my_account">我的账户</string>
    <string name="modify_user_name">修改用户名</string>
    <string name="find_pay_pwd">找回支付密码</string>
    <string name="modify_pwd">修改密码</string>
    <string name="save_verification">安全验证</string>
    <string name="pay_pwd">支付密码</string>
    <string name="modify_pay_pwd">修改支付密码</string>
    <string name="vip_des">VIP1:0~300积分
        \u0009VIP2:300~1000积分
          \u0009VIP3:1000~3000积分
            \u0009VIP4:3000~10000积分
              \u0009VIP5:10000~30000积分
                   \u0009VIP6:30000~100000积分</string>
    <string name="submit_order">提交订单</string>
    <string name="payment_order">支付订单</string>
    <string name="pay_ok">确认支付</string>
    <string name="feedback">意见反馈</string>
    <string name="store_evaluation">商家评价</string>
    <string name="recent_evaluation">半年内评价158</string>
    <string name="notice">通知</string>
    <string name="notice_clean">清空</string>
    <string name="order_detail">订单详情</string>
    <string name="order_introduction">订单介绍</string>
    <string name="send">发送</string>
    <string name="feedback_hint">请输入反馈意见</string>
    <string name="bind_phone">您绑定的手机号码</string>
    <string name="bind_new_phone">绑定新手机号</string>
    <string name="totle_price">总价：</string>
    <string name="totle_num">数量：</string>
    <string name="balance">余额：</string>
    <string name="also_need_to_pay">还需支付：</string>
    <string name="pay_method">支付方式</string>
    <string name="alipay_payment">支付宝支付</string>
    <string name="hint_alipay">推荐有支付宝账号的用户使用</string>
    <string name="step1">1 输入手机号码</string>
    <string name="step2">2 输入验证码</string>
    <string name="step3">3 设置密码</string>
    <string name="desc_shrinkup">收起</string>
    <string name="desc_spread">显示更多</string>
    <string name="sto_album">商家相册</string>
    <string name="user_agrment">用户协议</string>
    <string name="customer_phone">客服电话：400&#8211;660&#8211;5353</string>
    <string name="other">其他</string>
    <string name="cash_clear">清空缓存</string>
    <string name="saosao">扫一扫</string>
    <string name="pay_help">支付帮助</string>
    <string name="check_for_updates">检查更新</string>
    <string name="phone">手机号</string>
    <string name="pwd">密码</string>
    <string name="other_login">使用合作网站账号进行登录</string>
    <string name="user_card">使用会员卡</string>
    <string name="spend">消费金额</string>
    <string name="spend_num">消费次数</string>
    <string name="card_recored">消费记录</string>
    <string name="card_des">会员卡说明</string>
    <string name="jifen_result">积分规则</string>
    <string name="jifen_jilv">积分记录</string>
    <string name="no_set">未设置</string>
    <string name="modfiy">修改</string>
    <string name="login_pwd">登录密码</string>
    <string name="change_phone">更换</string>
    <string name="binding_phone">已绑手机号</string>
    <string name="hint_yanzheng">请输入原来的支付密码验证身份</string>
    <string name="yanzheng_phone">验证手机号码：</string>
    <string name="input_yanzheng">请输入验证码：</string>
    <string name="send_code">发送手机验证码</string>
    <string name="yanzheng">验证</string>
    <string name="username">用户名：</string>
    <string name="pwd_hint_set">以中文或英文字母开头，限4&#8211;16个字符，一个汉字为两个字符</string>
    <string name="current_pwd">当前密码：</string>
    <string name="new_pwd">新密码：</string>
    <string name="confirm_new_pwd">确认新密码：</string>
    <string name="pwd_set_rule">密码长度至少6个字符，最多32个字符</string>
    <string name="eva">评价</string>
    <string name="all_goods">本店所有商品</string>
    <string name="payment">付款</string>
    <string name="pending_payment">待付款</string>
    <string name="evaluated">已评价</string>
    <string name="yi_refund">已退款</string>
    <string name="refunding">退款中</string>
    <string name="collect">收藏</string>
    <string name="yi_shoucang">已收藏</string>
    <string name="total_eva">总体评价</string>
    <string name="go_eva">去评价</string>
    <string name="hint_eva">（亲，您的评价将是其他用户的重要参考，请认真评价哦！）</string>
    <string name="niming_eva">匿名评价</string>
    <string name="tishi_eva">消费后超过90天的评价将无法获得积分</string>
    <string name="buy_quan">购买券</string>
    <string name="term_of_validity">有效期至：2014&#8211;12&#8211;29</string>
    <string name="used">已使用</string>
    <string name="apply_tuikuan">申请退款</string>
     <string name="cancel_tuikuan">取消退款</string>
    <string name="refund_details">退款详情</string>
    <string name="hint_aiplay_tishi">将退至您的 支付宝账户</string>
    <string name="refund_flow">退款流程</string>
    <string name="refund_help">退款帮助</string>
    <string name="order_pwd">订单券码(可多选)</string>
    <string name="refund_content">退还内容</string>
    <string name="ready">现金：</string>
    <string name="refund_method">现金退还方式</string>
    <string name="method_one">退至爱信阳账户</string>
    <string name="hint_method1">（本单支持立刻到账）</string>
    <string name="method_two">原路退回</string>
    <string name="hint_method2">（3&#8211;10个工作日内退款到原支付方）</string>
    <string name="method_reason">退款原因</string>
    <string name="reason1">预约不上</string>
    <string name="reason2">去过了，不太满意</string>
    <string name="reason3">朋友/网上评论不好</string>
    <string name="reason4">买多了/买错了</string>
    <string name="reason5">计划有变，没时间消费</string>
    <string name="reason6">后悔了，不想要了</string>
    <string name="reason7">商家说可以直接以折扣价到店消费</string>
    <string name="reminder">温馨提示</string>
    <string name="no_newData">暂无新数据</string>
    <string name="noLogin_hint">您还没有登录~</string>
    <string name="hint_new_pay_pwd">请输入新的支付密码</string>
    <string name="hint_confirm_pay_pwd">请输入确认支付密码</string>
	<string name="store_info">商家信息</string>
	<string name="buyNotice">购买须知</string>
	<string name="othergoods">本店其他商品</string>
	<string name="order_num">订单编号：</string>
	<string name="refund_success">退款申请成功</string>
	<string name="look_order">查看订单</string>
	<string name="success_hint">温馨提示：原路退款时，若订单显示“已退款”，表示款项已经从平台返回原支付方，距离到账时间3&#8211;10个工作日（少量商品需要额外增加3个工作日）</string>
    <string name="close">关闭</string>
    <string name="delete">删除</string>
	
</resources>