<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/citylist_divider"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_weight="0"
        android:background="@color/bg_actionbar"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:src="@drawable/abs__ic_ab_back_holo_dark" />

        <ImageButton
            android:id="@+id/img_goback1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dip"
            android:background="@drawable/ic_action_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="@string/modify_pay_pwd"
            android:textColor="@android:color/white"
            android:textSize="@dimen/head_text_size" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="12.0dip"
        android:text="@string/hint_yanzheng"
        android:textColor="@color/text_color_gray"
        android:textSize="@dimen/city_16_text" />

    <EditText
        android:id="@+id/old_pay_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/edittext_style"
        android:paddingBottom="12.0dip"
        android:paddingTop="12.0dip"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/text_17" />

    <TextView
        android:id="@+id/txt_ok_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20.0dip"
        android:background="@drawable/shape_00aeef"
        android:gravity="center"
        android:paddingBottom="10.0dip"
        android:paddingTop="10.0dip"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/group_purchase_title" />
    
</LinearLayout>