<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/citylist_divider" >

    <FrameLayout
        android:id="@+id/frame_layout_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/view_page_header" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/log_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frame_layout_login"
        android:layout_marginTop="15.0dp"
        android:visibility="visible" >

        <!-- 账号 -->

        <RelativeLayout
            android:id="@+id/ll_log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:layout_marginTop="5.0dip" >

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15.0dip"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="15.0dip"
                android:background="@drawable/mei_edit_style"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:paddingRight="5.0dip"
                android:singleLine="true"
                android:maxLength="11"
                android:textColorHint="@color/abs__bright_foreground_disabled_holo_dark"
                android:textSize="@dimen/text_17" />

            <TextView
                android:id="@+id/tv_checkcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/et_phone"
                android:layout_marginRight="15dip"
                android:layout_toRightOf="@id/et_phone"
                android:background="@drawable/shape_00aeef"
                android:paddingBottom="10.0dip"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:paddingTop="10.0dip"
                android:text="@string/get_code"
                android:textColor="@color/white"
                android:textSize="@dimen/text_17" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ll_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_log"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip" >

            <EditText
                android:id="@+id/et_phone_code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15.0dip"
                android:background="@drawable/mei_edit_style"
                android:hint="@string/hint_message_code"
                android:inputType="phone"
                android:singleLine="true"
                android:maxLength="6"
                android:textColorHint="@color/abs__bright_foreground_disabled_holo_dark"
                android:textSize="@dimen/text_17" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_code"
            android:layout_margin="15.0dip"
            android:background="@drawable/shape_00aeef"
            android:gravity="center"
            android:paddingBottom="10.0dp"
            android:paddingTop="10.0dp"
            android:text="@string/valid_login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/group_purchase_title" />
    </RelativeLayout>

</RelativeLayout>